<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/tv_drugcycle_once"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:drawableRight="@null"
            android:text="只响一次"
            android:textColor="@color/black_33"
            android:textSize="16sp"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/group_line_e5"></View>

        <TextView
            android:id="@+id/tv_drugcycle_0"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="left|center_vertical"
            android:layout_gravity="center"
            android:drawableRight="@null"
            android:text="每天"
            android:textColor="@color/black_33"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/group_line_e5"></View>

        <TextView
            android:id="@+id/tv_drugcycle_1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="left|center_vertical"
            android:layout_gravity="center"
            android:drawableRight="@null"
            android:text="@string/mon"
            android:textColor="@color/black_33"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/group_line_e5"></View>

        <TextView
            android:id="@+id/tv_drugcycle_2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="left|center_vertical"
            android:layout_gravity="center"
            android:drawableRight="@null"
            android:text="@string/tue"
            android:textColor="@color/black_33"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/group_line_e5"></View>

        <TextView
            android:id="@+id/tv_drugcycle_3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="left|center_vertical"
            android:layout_gravity="center"
            android:drawableRight="@null"
            android:text="@string/wed"
            android:textColor="@color/black_33"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/group_line_e5"></View>

        <TextView
            android:id="@+id/tv_drugcycle_4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="left|center_vertical"
            android:layout_gravity="center"
            android:drawableRight="@null"
            android:text="@string/thu"
            android:textColor="@color/black_33"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/group_line_e5"></View>

        <TextView
            android:id="@+id/tv_drugcycle_5"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="left|center_vertical"
            android:layout_gravity="center"
            android:drawableRight="@null"
            android:text="@string/fri"
            android:textColor="@color/black_33"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/group_line_e5"></View>

        <TextView
            android:id="@+id/tv_drugcycle_6"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="left|center_vertical"
            android:layout_gravity="center"
            android:drawableRight="@null"
            android:text="@string/sat"
            android:textColor="@color/black_33"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/group_line_e5"></View>

        <TextView
            android:id="@+id/tv_drugcycle_7"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="left|center_vertical"
            android:layout_gravity="center"
            android:drawableRight="@null"
            android:text="@string/sun"
            android:textColor="@color/black_33"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/group_line_e5"></View>

        <TextView
            android:id="@+id/tv_drugcycle_sure"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:drawableRight="@null"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_login_selector"
            style="@style/OvalButtom"
            android:gravity="center"
            android:text="@string/cycle_sure"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </LinearLayout>

</RelativeLayout>