<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background1"

    >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="#40000000">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerInParent="true"
            android:text="@string/register_name"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


        <TextView
            android:id="@id/register_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:drawableLeft="@drawable/back"
            android:drawablePadding="3dp"
            android:text="@string/back_name"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="48dp"

        >

        <RelativeLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="130dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/registe_phonenum"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/login_edit_selector"
                android:gravity="center"
                android:hint="@string/inputPhone"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="58dp">

                <EditText
                    android:id="@+id/register_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/login_edit_selector"
                    android:gravity="center"
                    android:hint="@string/inputPwd"
                    android:paddingRight="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <ImageButton
                    android:id="@id/registe_showPwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/showpassward"
                    android:scaleType="center" />
            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll"

            >

            <EditText
                android:id="@+id/register_inputvalidateCode"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/login_edit_selector"
                android:gravity="center"
                android:hint="@string/get_code"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:id="@+id/register_getValidataCode"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="18dp"
                android:layout_toRightOf="@id/register_inputvalidateCode"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/click_get_code"
                android:textColor="@color/half_gray" />

            <Button
                android:id="@id/register_register"
                style="@style/OvalButtom"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/register_getValidataCode"
                android:layout_marginTop="30dp"
                android:background="@drawable/login_login_selector"
                android:text="@string/register_name"
                android:textSize="14sp" />
        </RelativeLayout>


    </RelativeLayout>

    <!--<include layout="@layout/third_login"-->
    <!---->
    <!--></include>-->


</RelativeLayout>

