<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background1">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="#40000000">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login_name"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="14dp"
            android:text="@string/register_name"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/contain"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp">

        <RelativeLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="130dp"
            android:orientation="vertical">

            <EditText
                android:id="@id/login_phonenum"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/login_edit_selector"
                android:gravity="center"
                android:hint="@string/inputPhone"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="58dp">

                <EditText
                    android:id="@id/login_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/login_edit_selector"
                    android:gravity="center"
                    android:hint="@string/inputPwd"
                    android:inputType="textPassword"
                    android:paddingRight="25dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <ImageButton
                    android:id="@id/login_showPwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/hidepassward"
                    android:scaleType="center" />
            </RelativeLayout>
        </RelativeLayout>

        <TextView
            android:id="@id/login_forgetPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="15dp"
            android:text="@string/forgetPwd"
            android:textColor="@color/white" />

        <Button
            android:id="@id/login_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/login_forgetPwd"
            style="@style/OvalButtom"
            android:layout_marginTop="55dp"
            android:background="@drawable/login_login_selector"
            android:gravity="center"
            android:text="@string/login_name"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contain">
        <include layout="@layout/third_login"></include>
    </RelativeLayout>
</RelativeLayout>